--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,12 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  flutter_webrtc: 0.6.5
+  dartdoc: 1.0.0
+  flutter_redux: 0.8.2
+  redux: 5.0.0
+  google_fonts: 2.1.0
+  flutter_svg: 0.22.0
 
 dev_dependencies:
   flutter_test:
@@ -20,3 +26,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/
