--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_webrtc: 0.6.5
+  flutter_background: 1.0.0
+  path_provider: 2.0.1
   dartdoc: 1.0.0
   flutter_redux: 0.8.2
   redux: 5.0.0
