--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_svg: 0.22.0
   sdp_transform: 0.3.0
   web_socket_channel: 2.1.0
+  socket_io_client: 1.0.1
 
 dev_dependencies:
   flutter_test:
